[gd_scene load_steps=9 format=3 uid="uid://b2hl2gx0rqdb2"]

[ext_resource type="Font" path="res://Menu/Menu/MenuEntries.tres" id="1"]
[ext_resource type="PackedScene" uid="uid://dvf7qw24kwass" path="res://Menu/Menu/SubmenuTitle.tscn" id="2"]
[ext_resource type="Script" path="res://Menu/MenuCampaign/MenuCampaignNew/BackToMenuCampaign.gd" id="3"]
[ext_resource type="Script" path="res://Menu/MenuCampaign/MenuCampaignNew/StartCampaign.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://b625u3365cdvf" path="res://Menu/MenuCampaign/MenuCampaignNew/Campaign2Blocked.png" id="5"]
[ext_resource type="Script" path="res://Menu/MenuCampaign/MenuCampaignNew/MenuCampaignNew.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://djmbljuc0uyaw" path="res://Menu/MenuCampaign/MenuCampaignNew/Campaign3Blocked.png" id="7"]
[ext_resource type="Texture2D" uid="uid://dab3u4ixqbkyj" path="res://Menu/MenuCampaign/MenuCampaignNew/Campaign1Normal.png" id="8"]

[node name="MenuCampaignNew" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "6" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.683
anchor_top = 0.781
anchor_right = 0.95
anchor_bottom = 0.9
custom_constants/separation = 18
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartCampaign" type="Button" parent="Buttons"]
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( "1" )
disabled = true
text = "Start Campaign"
script = ExtResource( "4" )

[node name="Back" type="Button" parent="Buttons"]
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( "1" )
text = "Back"
script = ExtResource( "3" )

[node name="Options" parent="." instance=ExtResource( "2" )]
text = "new campaign"
structured_text_bidi_override_options = []
script = null

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.05
anchor_top = 0.25
anchor_right = 0.9
anchor_bottom = 0.7
color = Color(0.298039, 0.298039, 0.298039, 1)
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
custom_constants/separation = 31
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="ColorRect/MarginContainer/HBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( "8" )
expand = true
script = null

[node name="TextureButton2" type="TextureButton" parent="ColorRect/MarginContainer/HBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( "5" )
expand = true
script = null

[node name="TextureButton3" type="TextureButton" parent="ColorRect/MarginContainer/HBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
toggle_mode = true
texture_normal = ExtResource( "7" )
expand = true
script = null

[connection signal="button_up" from="Buttons/StartCampaign" to="Buttons/StartCampaign" method="_on_StartCampaign_button_up"]
[connection signal="pressed" from="Buttons/Back" to="Buttons/Back" method="_on_BackToMenuCampaign_pressed"]
[connection signal="toggled" from="ColorRect/MarginContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_toggled"]
